--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: df_async_loader
-description: "This Flutter package provides a static method that waits for an asynchronous task to complete while displaying a loading dialog. It's designed to simplify async task handling with built-in user feedback, making it easier to manage loading states in your app."
+description: "This Flutter package provides a static method that waits for an asynchronous task to complete while displaying a loading dialog."
 
 version: 1.0.0+1
 
